Version 2.0.2 [NOT YET RELEASED]
  * Have encode_string work with iolists.

Version 2.0.1
  * Have encode_string take binaries.

Version 2.0.0
  * Include fuse context in callbacks.

Version 1.0.1
  * Fix 'make dist'

Version 1.0.0
  * Switch to low-level interface (fuserldrv 1.0.0).

Version 0.0.1
  * Darwin test fixes (wait for mount).

Version 0.0.0
  * Initial version.