@@ -1,5 +1,6 @@
 Version 2.0.2 [NOT YET RELEASED]
   * Have encode_string work with iolists.
+  * Fix dirent_size to agree with include/fuse_kernel.h
 
 Version 2.0.1
   * Have encode_string take binaries.
